# portfolio

./: .gitignore  README.md
.github/workflows/: docker-image.yml
backend/: Dockerfile  docker-compose.yml  main.py  requirements.txt  setup.cfg  test_main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: api_root.tsx
frontend/src/chapters/: FirstChapter.tsx  ForthChapter.tsx  Introduction.tsx  LanguagesChapter.tsx
frontend/src/components/: Background4.tsx  Blackhole.tsx  Castle.tsx  Galaxy1.tsx  JamesWebb.tsx  Mountains.tsx  NavDrawer.tsx  Nebula.tsx  Nebula2.tsx  OrionSpaceShuttle.tsx  PortfolioBackground.tsx  ProjectPosterBox.tsx  ScrollDownIcon.tsx  ScrollToTop.tsx  Webb1.tsx  sphere.tsx
frontend/src/data/: about.ts  categories.ts  photos.ts  sections.ts  services.ts
frontend/src/events/: revealEv.tsx
frontend/src/models/: ProjectBox.tsx
frontend/src/router/: router.tsx
frontend/src/routes/: about.tsx  photography.tsx  projectPage.tsx  software.tsx
portfolio/: index.html  package-lock.json  package.json  vite.config.ts
portfolio/src/: App.css  App.tsx  index.css  main.tsx  sphere.tsx  token.txt
portfolio/src/chapters/: FifthChapter.tsx  FirstChapter.tsx  ForthChapter.tsx  Introduction.tsx  LanguagesChapter.tsx  SecondChapter.tsx  SixthChapter.tsx  ThirdChapter.tsx
portfolio/src/components/: Background.tsx  Background2.tsx  Background3.tsx  Blackhole.tsx  Castle.tsx  Comet.tsx  Copyright.tsx  DeepSpace.tsx  EducationStepper.tsx  Footer.tsx  Galaxy1.tsx  (+25 more)
(+18 files in other folders)
