[metadata]
name = fanimator
version = 0.1.0
description = Personal Portfolio of Franciska Török
author = Franciska Török
author_email = torok.franciska.leonora@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    fastapi
    sqlalchemy
    uvicorn
    psycopg2
    python-dotenv

[options.extras_require]
dev =
    pytest
    black
    flake8

[flake8]
exclude = venv/*, .git, __pycache__, */migrations/*
max-line-length = 88
